@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.31 2005/10/22 14:14:42 wiz Exp $
+# $NetBSD: Makefile,v 1.32 2005/12/08 06:32:30 uebayasi Exp $
 
-DISTNAME=		libpcap-0.9.3
-PKGREVISION=		4
+DISTNAME=		libpcap-0.9.4
 SVR4_PKGNAME=		lpcap
 CATEGORIES=		net
 MASTER_SITES= 		http://www.tcpdump.org/release/
