@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.12136 2005/12/08 01:33:01 wiz Exp $
+$NetBSD: CHANGES,v 1.12137 2005/12/08 06:33:27 uebayasi Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -5526,3 +5526,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated sysutils/bacula to 1.38.2 [wiz 2005-12-08]
 	Updated sysutils/bacula-clientonly to 1.38.2 [wiz 2005-12-08]
 	Updated sysutils/bacula-doc to 1.38.2 [wiz 2005-12-08]
+	Updated net/libpcap to 0.9.4 [uebayasi 2005-12-08]
